# Vision-Based-Grounding

./: README.md  capture_annotated_grounding.py  main.py  posts.sample.json  pyproject.toml
