[project]
name = "notepad-grounding-automation"
version = "0.1.0"
description = "Desktop automation using Set-of-Mark visual grounding for Notepad"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyautogui>=0.9.54",
  "opencv-python>=4.10.0.84",
  "requests>=2.32.3",
  "pygetwindow>=0.0.9",
  "numpy>=2.1.1",
  "pillow>=10.4.0",
  "pytesseract>=0.3.13",
]

[project.scripts]
notepad-grounding = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
